Fixed Wrapping issue on footer links.

--- a/src/components/shared-components/footer/Footer.css
+++ b/src/components/shared-components/footer/Footer.css
@@ -13,6 +13,11 @@ body {
   border-top-right-radius: 10px;
 }
 
+.footer-container {
+  padding-left: 2%;
+  padding-right: 2%;
+}
+
 .footer-divider {
   width: 100%;
   border: 1px solid #e6e7e8;
@@ -27,11 +32,41 @@ body {
   justify-content: space-between;
   align-items: center;
   margin: 1%;
-  font-size: 2vmin;
+  font-size: 25px;
   font-family: 'DM Sans', sans-serif;
   font-weight: 400;
   margin-bottom: 1%;
   margin-top: 1%;
+}
+
+@media (max-width: 1440px) {
+  .top-area {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 1000px) {
+  .top-area {
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 700px) {
+  .top-area {
+    font-size: 12.5px;
+  }
+}
+
+@media (max-width: 500px) {
+  .top-area {
+    font-size: 8px;
+  }
+}
+
+@media (max-width: 350px) {
+  .top-area {
+    font-size: 6px;
+  }
 }
 
 .footer-logo {
@@ -89,17 +124,21 @@ body {
   gap: 1rem;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 750px) {
+  .internal-pages {
+    gap: 0.75rem;
+  }
+}
+
+@media (max-width: 300px) {
   .internal-pages {
     gap: 0.5rem;
-    flex-basis: calc(50% - 20px);
   }
 }
 
 .footer-link {
   min-width: 10%;
   height: auto;
-  font-size: 10vwpx;
   font-family: 'DM Sans', sans-serif;
   font-weight: 400;
 }
@@ -118,7 +157,6 @@ body {
 .admin-link {
   height: fit-content;
   width: fit-content;
-  font-size: 2vmin;
 }
 
 .admin-link:link {
